# kylas-crm-mcp-server

./: Dockerfile  LICENSE  PUBLISHING.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.json  test_tools.py
